// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Document View Command - Help Text 1`] = `
"stdout:
"Usage: view|v [options] <id>

View a document's content

Arguments:
  id             Document ID or slug

Options:
  --raw          Output raw markdown without rendering
  -w, --web      Open document in browser
  --json         Output full document as JSON
  --no-download  Keep remote URLs instead of downloading files
  -h, --help     display help for command
"
stderr:
"""
`;

exports[`Document View Command - View Document 1`] = `
"stdout:
"# Delegation System

This document describes the delegation system architecture.

## Overview

The system supports user-to-user delegations with time-bounded capabilities.

## Implementation

- UCAN-based delegation chains
- PKH DID format for user identity
- Session key DIDs for signing
"
stderr:
"""
`;

exports[`Document View Command - Raw Output 1`] = `
"stdout:
"# Delegation System

This document describes the delegation system architecture.
"
stderr:
"""
`;

exports[`Document View Command - JSON Output 1`] = `
"stdout:
"{
  "id": "doc-1",
  "title": "Delegation System Spec",
  "slugId": "d4b93e3b2695",
  "content": "# Delegation System\\n\\nThis document describes the delegation system architecture.",
  "url": "https://linear.app/test/document/delegation-system-spec-d4b93e3b2695",
  "createdAt": "2026-01-15T08:00:00Z",
  "updatedAt": "2026-01-18T10:30:00Z",
  "creator": {
    "name": "John Doe",
    "email": "john@example.com"
  },
  "project": {
    "name": "TinyCloud SDK",
    "slugId": "tinycloud-sdk"
  },
  "issue": null
}
"
stderr:
"""
`;

exports[`Document View Command - No Download Keeps Remote URLs 1`] = `
"stdout:
"# Doc

![screenshot](https://uploads.linear.app/abc/screenshot.png)
"
stderr:
"""
`;

exports[`Document View Command - Document Attached To Issue 1`] = `
"stdout:
"# Investigation Notes

Notes from investigating TC-123.
"
stderr:
"""
`;
